y.output

state 0
	$accept : _LINE $end 
	$$1 : _    (1)

	.  reduce 1

	LINE  goto 1
	$$1  goto 2

state 1
	$accept :  LINE_$end 

	$end  accept
	.  error


state 2
	LINE :  $$1_OPT_LBL CMD 
	OPT_LBL : _    (5)
	$$376 : _    (376)

	Y_ID  reduce 376
	.  reduce 5

	OPT_LBL  goto 3
	ID  goto 4
	$$376  goto 5

state 3
	LINE :  $$1 OPT_LBL_CMD 

	Y_EOF  shift 10
	Y_NL  shift 9
	Y_ABS_D_OP  shift 239
	Y_ABS_S_OP  shift 238
	Y_ADDIU_OP  shift 153
	Y_ADDI_OP  shift 152
	Y_ADDU_OP  shift 143
	Y_ADD_D_OP  shift 241
	Y_ADD_OP  shift 142
	Y_ADD_S_OP  shift 240
	Y_ANDI_OP  shift 154
	Y_AND_OP  shift 144
	Y_BC0F_OP  shift 186
	Y_BC0T_OP  shift 182
	Y_BC1F_OP  shift 187
	Y_BC1T_OP  shift 183
	Y_BC2F_OP  shift 188
	Y_BC2T_OP  shift 184
	Y_BC3F_OP  shift 189
	Y_BC3T_OP  shift 185
	Y_BEQ_OP  shift 198
	Y_BGEZAL_OP  shift 191
	Y_BGEZ_OP  shift 190
	Y_BGTZ_OP  shift 192
	Y_BLEZ_OP  shift 193
	Y_BLTZAL_OP  shift 195
	Y_BLTZ_OP  shift 194
	Y_BNE_OP  shift 199
	Y_BREAK_OP  shift 27
	Y_CFC0_OP  shift 230
	Y_CFC1_OP  shift 231
	Y_CFC2_OP  shift 232
	Y_CFC3_OP  shift 233
	Y_CTC0_OP  shift 234
	Y_CTC1_OP  shift 235
	Y_CTC2_OP  shift 236
	Y_CTC3_OP  shift 237
	Y_CVT_D_S_OP  shift 248
	Y_CVT_D_W_OP  shift 249
	Y_CVT_S_D_OP  shift 250
	Y_CVT_S_W_OP  shift 251
	Y_CVT_W_D_OP  shift 252
	Y_CVT_W_S_OP  shift 253
	Y_C_EQ_D_OP  shift 272
	Y_C_EQ_S_OP  shift 258
	Y_C_F_D_OP  shift 270
	Y_C_F_S_OP  shift 256
	Y_C_LE_D_OP  shift 282
	Y_C_LE_S_OP  shift 268
	Y_C_LT_D_OP  shift 280
	Y_C_LT_S_OP  shift 266
	Y_C_NGE_D_OP  shift 281
	Y_C_NGE_S_OP  shift 267
	Y_C_NGLE_D_OP  shift 277
	Y_C_NGLE_S_OP  shift 263
	Y_C_NGL_D_OP  shift 279
	Y_C_NGL_S_OP  shift 265
	Y_C_NGT_D_OP  shift 283
	Y_C_NGT_S_OP  shift 269
	Y_C_OLE_D_OP  shift 274
	Y_C_OLE_S_OP  shift 260
	Y_C_SEQ_D_OP  shift 278
	Y_C_SEQ_S_OP  shift 264
	Y_C_SF_D_OP  shift 276
	Y_C_SF_S_OP  shift 262
	Y_C_UEQ_D_OP  shift 273
	Y_C_UEQ_S_OP  shift 259
	Y_C_ULE_D_OP  shift 275
	Y_C_ULE_S_OP  shift 261
	Y_C_UN_D_OP  shift 271
	Y_C_UN_S_OP  shift 257
	Y_DIVU_OP  shift 166
	Y_DIV_D_OP  shift 243
	Y_DIV_OP  shift 165
	Y_DIV_S_OP  shift 242
	Y_JALR_OP  shift 211
	Y_JAL_OP  shift 210
	Y_JR_OP  shift 209
	Y_J_OP  shift 208
	Y_LBU_OP  shift 111
	Y_LB_OP  shift 110
	Y_LHU_OP  shift 113
	Y_LH_OP  shift 112
	Y_LUI_OP  shift 122
	Y_LWC0_OP  shift 119
	Y_LWC1_OP  shift 125
	Y_LWC2_OP  shift 120
	Y_LWC3_OP  shift 121
	Y_LWL_OP  shift 115
	Y_LWR_OP  shift 116
	Y_LW_OP  shift 114
	Y_MFC0_OP  shift 220
	Y_MFC1_OP  shift 221
	Y_MFC2_OP  shift 223
	Y_MFC3_OP  shift 224
	Y_MFHI_OP  shift 216
	Y_MFLO_OP  shift 217
	Y_MOV_D_OP  shift 215
	Y_MOV_S_OP  shift 214
	Y_MTC0_OP  shift 225
	Y_MTC1_OP  shift 226
	Y_MTC2_OP  shift 228
	Y_MTC3_OP  shift 229
	Y_MTHI_OP  shift 218
	Y_MTLO_OP  shift 219
	Y_MULTU_OP  shift 173
	Y_MULT_OP  shift 172
	Y_MUL_D_OP  shift 245
	Y_MUL_S_OP  shift 244
	Y_NEG_D_OP  shift 255
	Y_NEG_S_OP  shift 254
	Y_NOR_OP  shift 162
	Y_ORI_OP  shift 155
	Y_OR_OP  shift 146
	Y_PFW_OP  shift 118
	Y_RFE_OP  shift 140
	Y_SB_OP  shift 128
	Y_SH_OP  shift 129
	Y_SLLV_OP  shift 149
	Y_SLL_OP  shift 159
	Y_SLTIU_OP  shift 158
	Y_SLTI_OP  shift 157
	Y_SLTU_OP  shift 148
	Y_SLT_OP  shift 147
	Y_SRAV_OP  shift 150
	Y_SRA_OP  shift 160
	Y_SRLV_OP  shift 151
	Y_SRL_OP  shift 161
	Y_SUBU_OP  shift 164
	Y_SUB_D_OP  shift 247
	Y_SUB_OP  shift 163
	Y_SUB_S_OP  shift 246
	Y_SWC0_OP  shift 134
	Y_SWC1_OP  shift 137
	Y_SWC2_OP  shift 135
	Y_SWC3_OP  shift 136
	Y_SWL_OP  shift 131
	Y_SWR_OP  shift 132
	Y_SW_OP  shift 130
	Y_SYSCALL_OP  shift 141
	Y_XORI_OP  shift 156
	Y_XOR_OP  shift 145
	Y_ABS_POP  shift 29
	Y_BAL_POP  shift 213
	Y_BEQZ_POP  shift 196
	Y_BGEU_POP  shift 203
	Y_BGE_POP  shift 202
	Y_BGTU_POP  shift 201
	Y_BGT_POP  shift 200
	Y_BLEU_POP  shift 207
	Y_BLE_POP  shift 206
	Y_BLTU_POP  shift 205
	Y_BLT_POP  shift 204
	Y_BNEZ_POP  shift 197
	Y_B_POP  shift 212
	Y_LA_POP  shift 14
	Y_LD_POP  shift 117
	Y_LI_POP  shift 15
	Y_LI_D_POP  shift 16
	Y_LI_S_POP  shift 17
	Y_L_D_POP  shift 127
	Y_L_S_POP  shift 126
	Y_MFC1_D_POP  shift 222
	Y_MTC1_D_POP  shift 227
	Y_MOVE_POP  shift 33
	Y_MULOU_POP  shift 171
	Y_MULO_POP  shift 170
	Y_MUL_POP  shift 169
	Y_NEGU_POP  shift 31
	Y_NEG_POP  shift 30
	Y_NOP_POP  shift 28
	Y_NOT_POP  shift 32
	Y_REMU_POP  shift 168
	Y_REM_POP  shift 167
	Y_ROL_POP  shift 44
	Y_ROR_POP  shift 43
	Y_SD_POP  shift 133
	Y_SEQ_POP  shift 180
	Y_SGEU_POP  shift 179
	Y_SGE_POP  shift 178
	Y_SGTU_POP  shift 177
	Y_SGT_POP  shift 176
	Y_SLEU_POP  shift 175
	Y_SLE_POP  shift 174
	Y_SNE_POP  shift 181
	Y_S_D_POP  shift 139
	Y_S_S_POP  shift 138
	Y_ULHU_POP  shift 124
	Y_ULH_POP  shift 123
	Y_ULW_POP  shift 18
	Y_USH_POP  shift 24
	Y_USW_POP  shift 23
	Y_ALIAS_DIR  shift 69
	Y_ALIGN_DIR  shift 70
	Y_ASCII_DIR  shift 71
	Y_ASCIIZ_DIR  shift 72
	Y_ASM0_DIR  shift 73
	Y_BGNB_DIR  shift 74
	Y_BYTE_DIR  shift 75
	Y_COMM_DIR  shift 76
	Y_DATA_DIR  shift 77
	Y_DOUBLE_DIR  shift 79
	Y_ENDB_DIR  shift 81
	Y_ENDR_DIR  shift 82
	Y_END_DIR  shift 80
	Y_ENT_DIR  shift 83
	Y_ERR_DIR  shift 85
	Y_EXTERN_DIR  shift 84
	Y_FILE_DIR  shift 86
	Y_FLOAT_DIR  shift 87
	Y_FMASK_DIR  shift 88
	Y_FRAME_DIR  shift 89
	Y_GLOBAL_DIR  shift 90
	Y_HALF_DIR  shift 91
	Y_K_TEXT_DIR  shift 106
	Y_K_DATA_DIR  shift 78
	Y_LABEL_DIR  shift 92
	Y_LCOMM_DIR  shift 93
	Y_LIVEREG_DIR  shift 94
	Y_LOC_DIR  shift 95
	Y_MASK_DIR  shift 96
	Y_NOALIAS_DIR  shift 97
	Y_OPTIONS_DIR  shift 98
	Y_RDATA_DIR  shift 100
	Y_REPEAT_DIR  shift 99
	Y_SDATA_DIR  shift 101
	Y_SET_DIR  shift 102
	Y_SPACE_DIR  shift 103
	Y_STRUCT_DIR  shift 104
	Y_TEXT_DIR  shift 105
	Y_VERSTAMP_DIR  shift 107
	Y_VREG_DIR  shift 108
	Y_WORD_DIR  shift 109
	.  error

	CMD  goto 6
	ASM_CODE  goto 7
	ASM_DIRECTIVE  goto 8
	LOAD_OP  goto 11
	LOAD_COP  goto 12
	LOAD_IMM_OP  goto 13
	ULOADH_POP  goto 19
	LOADF_OP  goto 20
	STORE_OP  goto 21
	STORE_COP  goto 22
	STOREF_OP  goto 25
	SYS_OP  goto 26
	BINARY_OP_I  goto 34
	BINARY_OPR_I  goto 35
	BINARY_IMM_OP  goto 36
	SHIFT_OP  goto 37
	BINARY_OP_NOI  goto 38
	SUB_OP  goto 39
	DIV_POP  goto 40
	MUL_POP  goto 41
	MULT_OP  goto 42
	SET_LE_POP  goto 45
	SET_GT_POP  goto 46
	SET_GE_POP  goto 47
	SET_EQ_POP  goto 48
	NULLARY_BR_OP  goto 49
	UNARY_BR_OP  goto 50
	UNARY_BR_POP  goto 51
	BINARY_BR_OP  goto 52
	BR_GT_POP  goto 53
	BR_GE_POP  goto 54
	BR_LT_POP  goto 55
	BR_LE_POP  goto 56
	J_OPS  goto 57
	B_OP  goto 58
	MOVE_COP_OP  goto 59
	MOV_FROM_HILO_OP  goto 60
	MOV_TO_HILO_OP  goto 61
	MOV_COP_OP  goto 62
	CTL_COP_OP  goto 63
	FP_ABS_OP  goto 64
	FP_BINARY_OP  goto 65
	FP_CONVERT_OP  goto 66
	FP_NEG_OP  goto 67
	FP_CMP_OP  goto 68

state 4
	OPT_LBL :  ID_: 
	OPT_LBL :  ID_= Y_INT 

	:  shift 284
	=  shift 285
	.  error


state 5
	ID :  $$376_Y_ID 

	Y_ID  shift 286
	.  error


state 6
	LINE :  $$1 OPT_LBL CMD_    (2)

	.  reduce 2


state 7
	CMD :  ASM_CODE_Y_NL 

	Y_NL  shift 287
	.  error


state 8
	CMD :  ASM_DIRECTIVE_Y_NL 

	Y_NL  shift 288
	.  error


state 9
	CMD :  Y_NL_    (8)

	.  reduce 8


state 10
	CMD :  Y_EOF_    (9)

	.  reduce 9


state 11
	ASM_CODE :  LOAD_OP_DEST_REG ADDRESS 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 289
	REGISTER  goto 290

state 12
	ASM_CODE :  LOAD_COP_COP_REG ADDRESS 

	Y_REG  shift 293
	Y_FP_REG  shift 294
	.  error

	COP_REG  goto 292

state 13
	ASM_CODE :  LOAD_IMM_OP_DEST_REG IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 295
	REGISTER  goto 290

state 14
	ASM_CODE :  Y_LA_POP_DEST_REG ADDRESS 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 296
	REGISTER  goto 290

state 15
	ASM_CODE :  Y_LI_POP_DEST_REG IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 297
	REGISTER  goto 290

state 16
	ASM_CODE :  Y_LI_D_POP_F_DEST Y_FP 

	Y_FP_REG  shift 300
	.  error

	F_DEST  goto 298
	FP_REGISTER  goto 299

state 17
	ASM_CODE :  Y_LI_S_POP_F_DEST Y_FP 

	Y_FP_REG  shift 300
	.  error

	F_DEST  goto 301
	FP_REGISTER  goto 299

state 18
	ASM_CODE :  Y_ULW_POP_DEST_REG ADDRESS 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 302
	REGISTER  goto 290

state 19
	ASM_CODE :  ULOADH_POP_DEST_REG ADDRESS 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 303
	REGISTER  goto 290

state 20
	ASM_CODE :  LOADF_OP_F_DEST ADDRESS 

	Y_FP_REG  shift 300
	.  error

	F_DEST  goto 304
	FP_REGISTER  goto 299

state 21
	ASM_CODE :  STORE_OP_SOURCE ADDRESS 

	Y_REG  shift 291
	.  error

	SOURCE  goto 305
	REGISTER  goto 306

state 22
	ASM_CODE :  STORE_COP_COP_REG ADDRESS 

	Y_REG  shift 293
	Y_FP_REG  shift 294
	.  error

	COP_REG  goto 307

state 23
	ASM_CODE :  Y_USW_POP_SOURCE ADDRESS 

	Y_REG  shift 291
	.  error

	SOURCE  goto 308
	REGISTER  goto 306

state 24
	ASM_CODE :  Y_USH_POP_SOURCE ADDRESS 

	Y_REG  shift 291
	.  error

	SOURCE  goto 309
	REGISTER  goto 306

state 25
	ASM_CODE :  STOREF_OP_F_SRC1 ADDRESS 

	Y_FP_REG  shift 300
	.  error

	F_SRC1  goto 310
	FP_REGISTER  goto 311

state 26
	ASM_CODE :  SYS_OP_    (25)

	.  reduce 25


state 27
	ASM_CODE :  Y_BREAK_OP_Y_INT 

	Y_INT  shift 312
	.  error


state 28
	ASM_CODE :  Y_NOP_POP_    (27)

	.  reduce 27


state 29
	ASM_CODE :  Y_ABS_POP_DEST_REG SRC1 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 313
	REGISTER  goto 290

state 30
	ASM_CODE :  Y_NEG_POP_DEST_REG SRC1 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 314
	REGISTER  goto 290

state 31
	ASM_CODE :  Y_NEGU_POP_DEST_REG SRC1 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 315
	REGISTER  goto 290

state 32
	ASM_CODE :  Y_NOT_POP_DEST_REG SRC1 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 316
	REGISTER  goto 290

state 33
	ASM_CODE :  Y_MOVE_POP_DEST_REG SRC1 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 317
	REGISTER  goto 290

state 34
	ASM_CODE :  BINARY_OP_I_DEST_REG SRC1 SRC2 
	ASM_CODE :  BINARY_OP_I_DEST_REG SRC1 IMM 
	ASM_CODE :  BINARY_OP_I_DEST_REG IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 318
	REGISTER  goto 290

state 35
	ASM_CODE :  BINARY_OPR_I_DEST_REG SRC1 SRC2 
	ASM_CODE :  BINARY_OPR_I_DEST_REG SRC1 Y_INT 
	ASM_CODE :  BINARY_OPR_I_DEST_REG Y_INT 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 319
	REGISTER  goto 290

state 36
	ASM_CODE :  BINARY_IMM_OP_DEST_REG SRC1 IMM 
	ASM_CODE :  BINARY_IMM_OP_DEST_REG IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 320
	REGISTER  goto 290

state 37
	ASM_CODE :  SHIFT_OP_DEST_REG SRC1 Y_INT 
	ASM_CODE :  SHIFT_OP_DEST_REG SRC1 SRC2 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 321
	REGISTER  goto 290

state 38
	ASM_CODE :  BINARY_OP_NOI_DEST_REG SRC1 SRC2 
	ASM_CODE :  BINARY_OP_NOI_DEST_REG SRC1 IMM 
	ASM_CODE :  BINARY_OP_NOI_DEST_REG IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 322
	REGISTER  goto 290

state 39
	ASM_CODE :  SUB_OP_DEST_REG SRC1 SRC2 
	ASM_CODE :  SUB_OP_DEST_REG SRC1 IMM 
	ASM_CODE :  SUB_OP_DEST_REG IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 323
	REGISTER  goto 290

state 40
	ASM_CODE :  DIV_POP_DEST_REG SRC1 
	ASM_CODE :  DIV_POP_DEST_REG SRC1 SRC2 
	ASM_CODE :  DIV_POP_DEST_REG SRC1 IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 324
	REGISTER  goto 290

state 41
	ASM_CODE :  MUL_POP_DEST_REG SRC1 SRC2 
	ASM_CODE :  MUL_POP_DEST_REG SRC1 IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 325
	REGISTER  goto 290

state 42
	ASM_CODE :  MULT_OP_SRC1 SRC2 

	Y_REG  shift 291
	.  error

	SRC1  goto 326
	REGISTER  goto 327

state 43
	ASM_CODE :  Y_ROR_POP_DEST_REG SRC1 SRC2 
	ASM_CODE :  Y_ROR_POP_DEST_REG SRC1 IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 328
	REGISTER  goto 290

state 44
	ASM_CODE :  Y_ROL_POP_DEST_REG SRC1 SRC2 
	ASM_CODE :  Y_ROL_POP_DEST_REG SRC1 IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 329
	REGISTER  goto 290

state 45
	ASM_CODE :  SET_LE_POP_DEST_REG SRC1 SRC2 
	ASM_CODE :  SET_LE_POP_DEST_REG SRC1 IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 330
	REGISTER  goto 290

state 46
	ASM_CODE :  SET_GT_POP_DEST_REG SRC1 SRC2 
	ASM_CODE :  SET_GT_POP_DEST_REG SRC1 IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 331
	REGISTER  goto 290

state 47
	ASM_CODE :  SET_GE_POP_DEST_REG SRC1 SRC2 
	ASM_CODE :  SET_GE_POP_DEST_REG SRC1 IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 332
	REGISTER  goto 290

state 48
	ASM_CODE :  SET_EQ_POP_DEST_REG SRC1 SRC2 
	ASM_CODE :  SET_EQ_POP_DEST_REG SRC1 IMM 

	Y_REG  shift 291
	.  error

	DEST_REG  goto 333
	REGISTER  goto 290

state 49
	ASM_CODE :  NULLARY_BR_OP_LABEL 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 335
	LABEL  goto 334
	$$376  goto 5

state 50
	ASM_CODE :  UNARY_BR_OP_SRC1 LABEL 

	Y_REG  shift 291
	.  error

	SRC1  goto 336
	REGISTER  goto 327

state 51
	ASM_CODE :  UNARY_BR_POP_SRC1 LABEL 

	Y_REG  shift 291
	.  error

	SRC1  goto 337
	REGISTER  goto 327

state 52
	ASM_CODE :  BINARY_BR_OP_SRC1 SRC2 LABEL 
	ASM_CODE :  BINARY_BR_OP_SRC1 IMMEDIATE LABEL 

	Y_REG  shift 291
	.  error

	SRC1  goto 338
	REGISTER  goto 327

state 53
	ASM_CODE :  BR_GT_POP_SRC1 SRC2 LABEL 
	ASM_CODE :  BR_GT_POP_SRC1 IMMEDIATE LABEL 

	Y_REG  shift 291
	.  error

	SRC1  goto 339
	REGISTER  goto 327

state 54
	ASM_CODE :  BR_GE_POP_SRC1 SRC2 LABEL 
	ASM_CODE :  BR_GE_POP_SRC1 IMMEDIATE LABEL 

	Y_REG  shift 291
	.  error

	SRC1  goto 340
	REGISTER  goto 327

state 55
	ASM_CODE :  BR_LT_POP_SRC1 SRC2 LABEL 
	ASM_CODE :  BR_LT_POP_SRC1 IMMEDIATE LABEL 

	Y_REG  shift 291
	.  error

	SRC1  goto 341
	REGISTER  goto 327

state 56
	ASM_CODE :  BR_LE_POP_SRC1 SRC2 LABEL 
	ASM_CODE :  BR_LE_POP_SRC1 IMMEDIATE LABEL 

	Y_REG  shift 291
	.  error

	SRC1  goto 342
	REGISTER  goto 327

state 57
	ASM_CODE :  J_OPS_LABEL 
	ASM_CODE :  J_OPS_SRC1 
	ASM_CODE :  J_OPS_DEST SRC1 
	$$376 : _    (376)

	Y_REG  shift 291
	.  reduce 376

	ID  goto 335
	SRC1  goto 344
	LABEL  goto 343
	DEST  goto 345
	REGISTER  goto 346
	$$376  goto 5

state 58
	ASM_CODE :  B_OP_LABEL 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 335
	LABEL  goto 347
	$$376  goto 5

state 59
	ASM_CODE :  MOVE_COP_OP_COP_REG COP_REG 

	Y_REG  shift 293
	Y_FP_REG  shift 294
	.  error

	COP_REG  goto 348

state 60
	ASM_CODE :  MOV_FROM_HILO_OP_REG 

	Y_REG  shift 291
	.  error

	REG  goto 349
	REGISTER  goto 350

state 61
	ASM_CODE :  MOV_TO_HILO_OP_REG 

	Y_REG  shift 291
	.  error

	REG  goto 351
	REGISTER  goto 350

state 62
	ASM_CODE :  MOV_COP_OP_REG COP_REG 

	Y_REG  shift 291
	.  error

	REG  goto 352
	REGISTER  goto 350

state 63
	ASM_CODE :  CTL_COP_OP_COP_REG COP_REG 

	Y_REG  shift 293
	Y_FP_REG  shift 294
	.  error

	COP_REG  goto 353

state 64
	ASM_CODE :  FP_ABS_OP_F_DEST F_SRC1 

	Y_FP_REG  shift 300
	.  error

	F_DEST  goto 354
	FP_REGISTER  goto 299

state 65
	ASM_CODE :  FP_BINARY_OP_F_DEST F_SRC1 F_SRC2 

	Y_FP_REG  shift 300
	.  error

	F_DEST  goto 355
	FP_REGISTER  goto 299

state 66
	ASM_CODE :  FP_CONVERT_OP_F_DEST F_SRC2 

	Y_FP_REG  shift 300
	.  error

	F_DEST  goto 356
	FP_REGISTER  goto 299

state 67
	ASM_CODE :  FP_NEG_OP_F_DEST F_SRC2 

	Y_FP_REG  shift 300
	.  error

	F_DEST  goto 357
	FP_REGISTER  goto 299

state 68
	ASM_CODE :  FP_CMP_OP_F_SRC1 F_SRC2 

	Y_FP_REG  shift 300
	.  error

	F_SRC1  goto 358
	FP_REGISTER  goto 311

state 69
	ASM_DIRECTIVE :  Y_ALIAS_DIR_Y_REG Y_REG 

	Y_REG  shift 359
	.  error


state 70
	ASM_DIRECTIVE :  Y_ALIGN_DIR_EXPR 
	$$376 : _    (376)

	Y_INT  shift 361
	.  reduce 376

	ID  goto 362
	EXPR  goto 360
	$$376  goto 5

state 71
	ASM_DIRECTIVE :  Y_ASCII_DIR_$$270 STR_LST 
	$$270 : _    (270)

	.  reduce 270

	$$270  goto 363

state 72
	ASM_DIRECTIVE :  Y_ASCIIZ_DIR_$$272 STR_LST 
	$$272 : _    (272)

	.  reduce 272

	$$272  goto 364

state 73
	ASM_DIRECTIVE :  Y_ASM0_DIR_    (274)

	.  reduce 274


state 74
	ASM_DIRECTIVE :  Y_BGNB_DIR_Y_INT 

	Y_INT  shift 365
	.  error


state 75
	ASM_DIRECTIVE :  Y_BYTE_DIR_$$276 EXPR_LST 
	$$276 : _    (276)

	.  reduce 276

	$$276  goto 366

state 76
	ASM_DIRECTIVE :  Y_COMM_DIR_ID EXPR 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 367
	$$376  goto 5

state 77
	ASM_DIRECTIVE :  Y_DATA_DIR_    (279)
	ASM_DIRECTIVE :  Y_DATA_DIR_Y_INT 

	Y_INT  shift 368
	.  reduce 279


state 78
	ASM_DIRECTIVE :  Y_K_DATA_DIR_    (281)
	ASM_DIRECTIVE :  Y_K_DATA_DIR_Y_INT 

	Y_INT  shift 369
	.  reduce 281


state 79
	ASM_DIRECTIVE :  Y_DOUBLE_DIR_$$283 FP_EXPR_LST 
	$$283 : _    (283)

	.  reduce 283

	$$283  goto 370

state 80
	ASM_DIRECTIVE :  Y_END_DIR_OPTIONAL_ID 
	$$372 : _    (372)

	.  reduce 372

	OPTIONAL_ID  goto 371
	$$372  goto 372

state 81
	ASM_DIRECTIVE :  Y_ENDB_DIR_Y_INT 

	Y_INT  shift 373
	.  error


state 82
	ASM_DIRECTIVE :  Y_ENDR_DIR_    (287)

	.  reduce 287


state 83
	ASM_DIRECTIVE :  Y_ENT_DIR_ID 
	ASM_DIRECTIVE :  Y_ENT_DIR_ID Y_INT 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 374
	$$376  goto 5

state 84
	ASM_DIRECTIVE :  Y_EXTERN_DIR_ID EXPR 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 375
	$$376  goto 5

state 85
	ASM_DIRECTIVE :  Y_ERR_DIR_    (291)

	.  reduce 291


state 86
	ASM_DIRECTIVE :  Y_FILE_DIR_Y_INT Y_STR 

	Y_INT  shift 376
	.  error


state 87
	ASM_DIRECTIVE :  Y_FLOAT_DIR_$$293 FP_EXPR_LST 
	$$293 : _    (293)

	.  reduce 293

	$$293  goto 377

state 88
	ASM_DIRECTIVE :  Y_FMASK_DIR_Y_INT Y_INT 

	Y_INT  shift 378
	.  error


state 89
	ASM_DIRECTIVE :  Y_FRAME_DIR_REGISTER Y_INT REGISTER 

	Y_REG  shift 291
	.  error

	REGISTER  goto 379

state 90
	ASM_DIRECTIVE :  Y_GLOBAL_DIR_ID 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 380
	$$376  goto 5

state 91
	ASM_DIRECTIVE :  Y_HALF_DIR_$$298 EXPR_LST 
	$$298 : _    (298)

	.  reduce 298

	$$298  goto 381

state 92
	ASM_DIRECTIVE :  Y_LABEL_DIR_ID 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 382
	$$376  goto 5

state 93
	ASM_DIRECTIVE :  Y_LCOMM_DIR_ID EXPR 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 383
	$$376  goto 5

state 94
	ASM_DIRECTIVE :  Y_LIVEREG_DIR_Y_INT Y_INT 

	Y_INT  shift 384
	.  error


state 95
	ASM_DIRECTIVE :  Y_LOC_DIR_Y_INT Y_INT 

	Y_INT  shift 385
	.  error


state 96
	ASM_DIRECTIVE :  Y_MASK_DIR_Y_INT Y_INT 

	Y_INT  shift 386
	.  error


state 97
	ASM_DIRECTIVE :  Y_NOALIAS_DIR_Y_REG Y_REG 

	Y_REG  shift 387
	.  error


state 98
	ASM_DIRECTIVE :  Y_OPTIONS_DIR_ID 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 388
	$$376  goto 5

state 99
	ASM_DIRECTIVE :  Y_REPEAT_DIR_EXPR 
	$$376 : _    (376)

	Y_INT  shift 361
	.  reduce 376

	ID  goto 362
	EXPR  goto 389
	$$376  goto 5

state 100
	ASM_DIRECTIVE :  Y_RDATA_DIR_    (308)
	ASM_DIRECTIVE :  Y_RDATA_DIR_Y_INT 

	Y_INT  shift 390
	.  reduce 308


state 101
	ASM_DIRECTIVE :  Y_SDATA_DIR_    (310)
	ASM_DIRECTIVE :  Y_SDATA_DIR_Y_INT 

	Y_INT  shift 391
	.  reduce 310


state 102
	ASM_DIRECTIVE :  Y_SET_DIR_ID 
	$$376 : _    (376)

	.  reduce 376

	ID  goto 392
	$$376  goto 5

state 103
	ASM_DIRECTIVE :  Y_SPACE_DIR_EXPR 
	$$376 : _    (376)

	Y_INT  shift 361
	.  reduce 376

	ID  goto 362
	EXPR  goto 393
	$$376  goto 5

state 104
	ASM_DIRECTIVE :  Y_STRUCT_DIR_EXPR 
	$$376 : _    (376)

	Y_INT  shift 361
	.  reduce 376

	ID  goto 362
	EXPR  goto 394
	$$376  goto 5

state 105
	ASM_DIRECTIVE :  Y_TEXT_DIR_    (315)
	ASM_DIRECTIVE :  Y_TEXT_DIR_Y_INT 

	Y_INT  shift 395
	.  reduce 315


state 106
	ASM_DIRECTIVE :  Y_K_TEXT_DIR_    (317)
	ASM_DIRECTIVE :  Y_K_TEXT_DIR_Y_INT 

	Y_INT  shift 396
	.  reduce 317


state 107
	ASM_DIRECTIVE :  Y_VERSTAMP_DIR_Y_INT Y_INT 

	Y_INT  shift 397
	.  error


state 108
	ASM_DIRECTIVE :  Y_VREG_DIR_REGISTER Y_INT Y_INT 

	Y_REG  shift 291
	.  error

	REGISTER  goto 398

state 109
	ASM_DIRECTIVE :  Y_WORD_DIR_$$321 EXPR_LST 
	$$321 : _    (321)

	.  reduce 321

	$$321  goto 399

state 110
	LOAD_OP :  Y_LB_OP_    (94)

	.  reduce 94


state 111
	LOAD_OP :  Y_LBU_OP_    (95)

	.  reduce 95


state 112
	LOAD_OP :  Y_LH_OP_    (96)

	.  reduce 96


state 113
	LOAD_OP :  Y_LHU_OP_    (97)

	.  reduce 97


state 114
	LOAD_OP :  Y_LW_OP_    (98)

	.  reduce 98


state 115
	LOAD_OP :  Y_LWL_OP_    (99)

	.  reduce 99


state 116
	LOAD_OP :  Y_LWR_OP_    (100)

	.  reduce 100


state 117
	LOAD_OP :  Y_LD_POP_    (101)

	.  reduce 101


state 118
	LOAD_OP :  Y_PFW_OP_    (102)

	.  reduce 102


state 119
	LOAD_COP :  Y_LWC0_OP_    (103)

	.  reduce 103


state 120
	LOAD_COP :  Y_LWC2_OP_    (104)

	.  reduce 104


state 121
	LOAD_COP :  Y_LWC3_OP_    (105)

	.  reduce 105


state 122
	LOAD_IMM_OP :  Y_LUI_OP_    (106)

	.  reduce 106


state 123
	ULOADH_POP :  Y_ULH_POP_    (107)

	.  reduce 107


state 124
	ULOADH_POP :  Y_ULHU_POP_    (108)

	.  reduce 108


state 125
	LOADF_OP :  Y_LWC1_OP_    (109)

	.  reduce 109


state 126
	LOADF_OP :  Y_L_S_POP_    (110)

	.  reduce 110


state 127
	LOADF_OP :  Y_L_D_POP_    (111)

	.  reduce 111


state 128
	STORE_OP :  Y_SB_OP_    (112)

	.  reduce 112


state 129
	STORE_OP :  Y_SH_OP_    (113)

	.  reduce 113


state 130
	STORE_OP :  Y_SW_OP_    (114)

	.  reduce 114


state 131
	STORE_OP :  Y_SWL_OP_    (115)

	.  reduce 115


state 132
	STORE_OP :  Y_SWR_OP_    (116)

	.  reduce 116


state 133
	STORE_OP :  Y_SD_POP_    (117)

	.  reduce 117


state 134
	STORE_COP :  Y_SWC0_OP_    (118)
